--- a/src/app/(pages)/signIn/signin.module.css
+++ b/src/app/(pages)/signIn/signin.module.css
@@ -189,8 +189,7 @@
     min-height: 100vh;
     background-color: #1e3432;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .logoContainer {
@@ -287,8 +286,7 @@
     min-height: 100vh;
     background-color: #1e3432;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .logoContainer {
