--- a/src/app/(pages)/signUp/signup.module.css
+++ b/src/app/(pages)/signUp/signup.module.css
@@ -167,8 +167,7 @@
     min-height: 100vh;
     background-color: #1e3432;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .logoContainer {
@@ -250,8 +249,7 @@
     min-height: 100vh;
     background-color: #1e3432;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .logoContainer {
